feat: added readme and improved swagger
