# docs/swagger.yaml
@@ -9,9 +9,17 @@ definitions:
   models.TokenRequest:
     properties:
       refresh_token:
+        example: 1fe0f4a0-9de9-4192-93b8-1a702b1eda2d
         type: string
     type: object
-host: localhost:8080
+  models.TokensResponse:
+    properties:
+      access_token:
+        type: string
+      refresh_token:
+        type: string
+    type: object
+host: localhost:8081
 info:
   contact: {}
   description: This is the API for the Auth Service.
@@ -26,6 +34,7 @@ paths:
       operationId: login
       parameters:
       - description: user id
+        example: 1fe0f4a0-9de9-4192-93b8-1a702b1eda2d
         format: uuid
         in: query
         name: user_id
@@ -37,7 +46,12 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Response'
+            allOf:
+            - $ref: '#/definitions/models.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.TokensResponse'
+              type: object
         "400":
           description: Bad Request
           schema:
@@ -128,7 +142,12 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Response'
+            allOf:
+            - $ref: '#/definitions/models.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/models.TokensResponse'
+              type: object
         "400":
           description: Bad Request
           schema:
